--- a/client/todo/template/todoFilters.template.html
+++ b/client/todo/template/todoFilters.template.html
@@ -1,3 +1,3 @@
-<button class="btn btn-primary" ng-click="stateFilter={completed: true}">Complated</button>
+<button class="btn btn-primary" ng-click="stateFilter={completed: true}">Completed</button>
 <button class="btn btn-primary" ng-click="stateFilter={completed: false}">Active</button>
 <button class="btn btn-primary" ng-click="stateFilter={ }">All</button>
