--- a/client/todo/template/todoItem.template.html
+++ b/client/todo/template/todoItem.template.html
@@ -1,8 +1,8 @@
 <div class="input-group">
   <span class="input-group-addon">
-    <input type="checkbox" ng-model="todo.completed" ng-click="update(todo, $index)">
+    <input type="checkbox" ng-model="todo.completed" ng-click="update($index)">
   </span>
-  <input type="text" class="form-control" ng-model="todo.title" ng-blur="update(todo, $index)">
+  <input type="text" class="form-control" ng-model="todo.title" ng-blur="update($index)">
   <span class="input-group-btn">
     <button class="btn btn-danger" type="button" ng-click="remove(todo)">삭제</button>
   </span>
